# ServerForOscilloscope

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
img/: Архитектура сервера для осциллографа.drawio
oscPlug/: oscilloscope_plug.cpp  oscilloscope_plug.h  oscilloscopes.h
project/: CommandDecoder.cpp  CommandDecoder.h  Server.cpp  Server.h  TypeCommands.cpp  TypeCommands.h  TypeICommands.cpp  TypeICommands.h  TypePCommands.cpp  TypePCommands.h  TypeSCommands.cpp  TypeSCommands.h  TypeVCommands.cpp  TypeVCommands.h  main.cpp  oscilloscopes.h  utils.cpp  utils.h
